# swarm

./: Cargo.toml  test.toml
app/: Cargo.toml
app/examples/: tari_dan.toml
app/src/: cli.rs  main.rs  string_list.rs
app/src/commands/: check_config.rs  mod.rs  run_action.rs  spawn.rs
examples/: basic.toml  tari.toml  tari_dan.toml
manager/: Cargo.toml
manager/migrations/: 20230605143228_create_processes.sql
manager/src/: id_allocator.rs  lib.rs  manager.rs  node.rs  process.rs  swarm.rs
manager/src/actions/: for_each.rs  fs_rm.rs  json_rpc.rs  mod.rs  provider.rs
manager/src/models/: process.rs
manager/src/storage/: mod.rs
manifest/: Cargo.toml
manifest/src/: lib.rs  manifest.rs  serde.rs  utils.rs  variables.rs
src/: cli.rs  config.rs  main.rs  serde.rs  specific.rs  swarm.rs
src/commands/: check_config.rs  mod.rs  spawn.rs
src/manifest/: config_format.rs  manifest.rs  mod.rs  utils.rs
