[package]
name = "swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
#tari_validator_node_client = { path = "/home/stan/tari/dan/clients/validator_node_client" }
#tari_common_types = { git = "https://github.com/tari-project/tari.git", tag = "v0.50.0-pre.1" }
#tari_utilities = "0.4.10"

manifest = { path = "../manifest" }
manager = { path = "../manager" }

anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "env"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "process"] }
toml = "0.7.4"

env_logger = "0.10.0"
