[package]
name = "swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
manifest = { path = "../manifest" }
manager = { path = "../manager" }

anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "env"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "process"] }
toml = "0.7.4"
colored = "2.0.0"

env_logger = "0.10.0"
