[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
manifest = { path = "../manifest" }

anyhow = "1.0.71"
async-trait = "0.1.68"
log = "0.4"
serde_json = "1.0"
sqlx = { version = "0.7.0-alpha.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "process", "net"] }
tokio-io = "0.1.13"
reqwest = { version = "0.11", features = ["json"] }

colored = "2.0.0"
